[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
libc = "0.2.161"
hornet = { git = "https://github.com/Project-SAN/HORNET", default-features = false }
rand_core = "0.9.3"
tempfile = "3.23.0"
